load("@bazel_pandoc//:pandoc.bzl", "pandoc")

#######
pandoc(
    name = "index",
    src = "index_ug.md",
    output = "index.md",  # optional, derived from name and to_format by default
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "aggregators",
    src = "aggregators_ug.md",
    output = "aggregators.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "aspects",
    src = "aspects_ug.md",
    output = "aspects.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "bootstrap",
    src = "bootstrap_ug.md",
    output = "bootstrap.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "buildrules",
    src = "build_rules_ug.md",
    output = "build_rules.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "caching",
    src = "caching_ug.md",
    output = "caching.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "ccdeps",
    src = "dependencies_cc_ug.md",
    output = "dependencies_cc.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "collections",
    src = "collections_ug.md",
    output = "collections.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "conditional",
    src = "conditional_ug.md",
    output = "conditional.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "configprofiles",
    src = "configprofiles_ug.md",
    output = "configprofiles.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "configrules",
    src = "configrules_ug.md",
    output = "configrules.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "configuration",
    src = "configuration_ug.md",
    output = "configuration.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "conventions",
    src = "conventions_ug.md",
    output = "conventions.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "deployment",
    src = "deployment_ug.md",
    output = "deployment.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "depmgmt",
    src = "depmgmt_ug.md",
    output = "depmgmt.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "deps_ocaml",
    src = "dependencies_ocaml_ug.md",
    output = "dependencies_ocaml.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "development",
    src = "development_ug.md",
    output = "development.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "diagnostics",
    src = "diagnostics_ug.md",
    output = "diagnostics.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "filegen",
    src = "filegen_ug.md",
    output = "filegen.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "interop",
    src = "interop_ug.md",
    output = "interop.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "maintenance",
    src = "maintenance_ug.md",
    output = "maintenance.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "misc",
    src = "misc_ug.md",
    output = "misc.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "namespacing",
    src = "namespacing_ug.md",
    output = "namespacing.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "offline",
    src = "offline_ug.md",
    output = "offline.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "opam",
    src = "opam_ug.md",
    output = "opam.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "optimization",
    src = "optimization_ug.md",
    output = "optimization.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "ppx",
    src = "ppx_ug.md",
    output = "ppx.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "profiles",
    src = "profiles_ug.md",
    output = "profiles.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "providers",
    src = "providers_ug.md",
    output = "providers.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "querying",
    src = "querying_ug.md",
    output = "querying.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "refactoring",
    src = "refactoring_ug.md",
    output = "refactoring.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "signatures",
    src = "signatures_ug.adoc",
    to_format = "asciidoc",
    output = "signatures.adoc",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "structures",
    src = "structures_ug.adoc",
    output = "structures.adoc",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "module_binding",
    src = "module_binding_ug.adoc",
    output = "module_binding.adoc",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "stamping",
    src = "stamping_ug.md",
    output = "stamping.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "testing",
    src = "testing_ug.md",
    output = "testing.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "toolchains",
    src = "toolchains_ug.md",
    output = "toolchains.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "tools",
    src = "tools_ug.md",
    output = "tools.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "troubleshooting",
    src = "troubleshooting_ug.md",
    output = "troubleshooting.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "user_bazelrc",
    src = "user_bazelrc_ug.md",
    output = "user_bazelrc.md",
    visibility = ["//visibility:public"],
)

#######
pandoc(
    name = "workspaces",
    src = "workspaces_ug.md",
    output = "workspaces.md",
    visibility = ["//visibility:public"],
)

################ rules ################
pandoc(
    name = "ocaml_archive",
    src = "ocaml_archive_ug.md",
    output = "ocaml_archive.md",
    visibility = ["//visibility:public"],
)
pandoc(
    name = "ocaml_executable",
    src = "ocaml_executable_ug.md",
    output = "ocaml_executable.md",
    visibility = ["//visibility:public"],
)
pandoc(
    name = "ocaml_import",
    src = "ocaml_import_ug.md",
    output = "ocaml_import.md",
    visibility = ["//visibility:public"],
)
pandoc(
    name = "ocaml_library",
    src = "ocaml_library_ug.md",
    output = "ocaml_library.md",
    visibility = ["//visibility:public"],
)
pandoc(
    name = "ocaml_ns",
    src = "ocaml_ns_ug.md",
    output = "ocaml_ns.md",
    visibility = ["//visibility:public"],
)

